Fullt fungerade med inlägg, filtrera och anmäla inlägg

--- a/OruBloggen/Views/Post/FormalPost.cshtml
+++ b/OruBloggen/Views/Post/FormalPost.cshtml
@@ -1,7 +1,10 @@
 ﻿@model OruBloggen.Models.HomePostViewModel
+@using Microsoft.AspNet.Identity
+@using OruBloggen.Models
 
 
 <h2>Formella inlägg</h2>
+
 
 @using (Html.BeginForm("AddPost", "Post", FormMethod.Post, new { enctype = "multipart/form-data" }))
 {
@@ -19,7 +22,7 @@
                     </div>
                     <div id="informal" class="form-inline">
                         <div style="float:left; width:20%">
-                            Välj en kategori: @Html.DropDownList("AddPostViewModel.PostCategory", ViewData["CategoriesFormal"] as List<SelectListItem>, new { @class = "form-control", })
+                            Välj en kategori: @Html.DropDownList("AddPostViewModel.PostCategory", ViewData["CategoriesFormal"] as List<SelectListItem>, new { @class = "form-control" })
                         </div>
                         <div style="float:left; width:20%; padding-top:0.5%">
                             <input type="file" name="file" value="Ladda upp en fil" />
@@ -31,46 +34,104 @@
                 </div>
             </form>
             <br />
-
-            <h3>Inlägg</h3>
-            @if (Model.PostViewModel != null)
-            {
-                foreach (var item in Model.PostViewModel)
-                {
-                    <div data-item-id="@item.PostID" class="todo-item list-group-item">
-                        <div style="width:100%; display:inline-block; padding-bottom:10px;">
-                            <img id="profileImg" class="img-circle" style="width:100px; height: auto; float:left; margin-right:30px;" src="/Images/@item.SenderProfilePath" /> &nbsp;
-                            <a id="postlink" href="~/Manage/">
-                                <h5>@item.PostSender</h5>
-                            </a>
-                            <p class="postcategory" style="font-size: xx-small;">#@item.PostCategory</p>
-                        </div>
-                        <div>
-                            <h4>@item.PostTitle</h4>
-
-                            <p class="message" style="font-size: small;"> @item.PostText</p>
-
-                            @if (item.PostFilePath != null)
-                            {
-                                if (item.PostFilePath.Contains("png") || item.PostFilePath.Contains("jpg") || item.PostFilePath.Contains("jpeg") || item.PostFilePath.Contains("gif"))
-                                {
-                                    <img src="/PostFiles/@item.PostFilePath" class="center-block" style="width:350px; height:auto;" />
-
-                                }
-
-                                else
-                                {
-                                    <a href="/PostFiles/@item.PostFilePath" download>Ladda ner dokument (@item.PostFilePath)</a>
-
-                                }
-                            }
-
-                            <p class="datetime" style="font-size: xx-small;"> @item.PostDate</p>
-                        </div>
-                    </div>
-                }
-            }
-
         </div>
     </div>
+}
+
+<hr />
+<div class="form-inline">
+    Filtrera inlägg: @Html.DropDownList("AddPostViewModel.PostCategory", ViewData["CategoriesFormal"] as List<SelectListItem>, new { @class = "form-control", @id = "filterBox" })
+    &nbsp;
+    <button class="btn btn-default" id="listPosts" onclick="document.location.href='/Post/FormalPost'">Lista alla inlägg</button>
+
+</div>
+<hr />
+
+<h3>Inlägg</h3>
+@if (Model.PostViewModel != null)
+{
+    foreach (var item in Model.PostViewModel)
+    {
+
+        <div data-item-id="@item.PostID" class="todo-item list-group-item">
+            <div style="width:100%; display:inline-block; padding-bottom:10px;">
+                <img id="profileImg" style="width:100px; height: 100px; float:left; margin-right:30px; border-radius: 50%;" src="/Images/@item.SenderProfilePath" /> &nbsp;
+                <a id="postlink" href="~/Manage/">
+                    <h4>@item.PostSenderName</h4>
+                </a>
+                <p class="postcategory" style="font-size: x-small;">#@item.PostCategory</p>
+            </div>
+            <div>
+                <h4>@item.PostTitle</h4>
+
+                <p class="message" style="font-size: small;"> @item.PostText</p>
+
+                @if (item.PostFilePath != null)
+                {
+                    if (item.PostFilePath.Contains("png") || item.PostFilePath.Contains("jpg") || item.PostFilePath.Contains("jpeg") || item.PostFilePath.Contains("gif"))
+                    {
+                        <img src="/PostFiles/@item.PostFilePath" class="center-block" style="width:350px; height:auto;" />
+
+                    }
+
+                    else
+                    {
+                        <a href="/PostFiles/@item.PostFilePath" download>Ladda ner dokument (@item.PostFilePath)</a>
+
+                    }
+                }
+
+                <p class="datetime" style="font-size: xx-small;"> @item.PostDate</p>
+                <a id="reportPost" style="float:right; font-size: xx-small; cursor:pointer;" data-toggle="modal" data-target="#@item.PostID">Anmäl inlägg</a>
+            </div>
+
+
+            <div id="@item.PostID" class="modal fade" role="dialog">
+                <div class="modal-dialog">
+                    <div class="modal-content">
+                        <div class="modal-header">
+                            <button type="button" class="close" data-dismiss="modal">&times;</button>
+                            <h4>Anmäl inlägg!</h4>
+                        </div>
+                        <div class="modal-body">
+                            <input type="radio" name="@item.PostID" value="Olämpligt innehåll" /> Olämpligt innehåll<br />
+                            <input type="radio" name="@item.PostID" value="Inte relevant innehåll" /> Inte relevant innehåll<br />
+                            <input type="radio" name="@item.PostID" value="Upplevs diskriminerande" /> Upplevs diskriminerande<br />
+                            <input type="radio" name="@item.PostID" value="Bilden upplevs stötande" /> Bilden upplevs stötande<br />
+                        </div>
+                        <div class="modal-footer">
+                            <button type="button" class="btn btn-default" onclick="getReason(@item.PostID)" data-dismiss="modal">Anmäl</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+
+
+            <div>
+                @if (item.PostSender == User.Identity.GetUserId() || Utility.isAdmin(User.Identity.GetUserId()))
+                {
+                    <button class="btn btn-default" onclick="location.href ='@Url.Action("RemoveMyPost", "Post", new { postID = item.PostID, isFormal = true})'">Ta bort inlägg</button>
+                }
+            </div>
+        </div>
+    }
+}
+
+
+@section scripts {
+    <script type="text/javascript">
+
+        $("#filterBox").change(function (ev) {
+            document.location.href = '/Post/FilterPosts?filterID=' + this.options[this.selectedIndex].value + '&isFormal=' + true;
+        });
+
+        function getReason(post) {
+            var reason = $("input[name='"+post+"']:checked").val();
+            var postID = post;
+
+            $.post('/ReportPost/ReportPost?postID=' + postID + '&reason=' + reason);
+        };
+
+    </script>
 }
