--- a/OruBloggen/Views/Shared/_LoginPartial.cshtml
+++ b/OruBloggen/Views/Shared/_LoginPartial.cshtml
@@ -22,6 +22,9 @@
     <li>
         @Html.ActionLink("Kalender", "Index", "MeetingCalendar")
     </li>
+    <li>
+        @Html.ActionLink("Mina Möten", "YourMeetings", "Meeting")
+    </li>
     @if (Request.IsAuthenticated)
     {
         if (Utility.isAdmin(User.Identity.GetUserId()))
