--- a/OruBloggen/Views/ProfilePage/showInfo.cshtml
+++ b/OruBloggen/Views/ProfilePage/showInfo.cshtml
@@ -6,11 +6,12 @@
 <h2>Välkommen @Model.Firstname</h2>
 @using (Html.BeginForm("ShowInfo", "ProfilePage", FormMethod.Post, new { enctype = "multipart/form-data" }))
 {
-<div>
+    <link rel="stylesheet" type="text/css" href="~/Content/Site.css" />
+    <div>
 
         <img src="@Model.ImagePath" class="images floatleft" />
 
-        <br/>
+        <br />
         <div class="floatleft">
             <dl class="dl-horizontal">
                 <dt>
@@ -64,6 +65,6 @@
 
             </dl>
         </div>
-</div>
+    </div>
 }
 
