Vet inte vad det är

--- a/OruBloggen/Views/Admin/Index.cshtml
+++ b/OruBloggen/Views/Admin/Index.cshtml
@@ -24,7 +24,7 @@
         <div class="col-md-4">
             <h2>Anmälningar</h2>
             @*<p>NuGet is a free Visual Studio extension that makes it easy to add, remove, and update libraries and tools in Visual Studio projects.</p>*@
-            <p><a class="btn btn-default" href="/Admin/AllUsers">Gå till anmälningar</a></p>
+            <p><a class="btn btn-default" href="/Admin/ReportDetails">Gå till anmälningar</a></p>
         </div>
     </div>
 }
