--- a/OruBloggen/Views/Meeting/ListCreatedMeetings.cshtml
+++ b/OruBloggen/Views/Meeting/ListCreatedMeetings.cshtml
@@ -1,7 +1,7 @@
 ﻿@model IEnumerable<OruBloggen.Models.MeetingModel>
 
 @{
-    ViewBag.Title = "YourMeetings";
+    ViewBag.Title = "ListCreatedMeetings";
 }
 
 <h2>Dina skapade möten</h2>
