--- a/OruBloggen/Content/Site.css
+++ b/OruBloggen/Content/Site.css
@@ -69,6 +69,12 @@ textarea {
     font-size: 20px;
 }
 
+.Mydiv {
+    width: 1000px;
+    border: 1px solid #ccc;
+    padding: 14px;
+    background: #ececec;
+}	
 
 
 
