--- a/OruBloggen/Views/Meeting/YourMeetings.cshtml
+++ b/OruBloggen/Views/Meeting/YourMeetings.cshtml
@@ -7,7 +7,7 @@
 <h2>Dina skapade möten</h2>
 
 <p>
-    @Html.ActionLink("Create New", "Create")
+    @Html.ActionLink("Skapa nytt möte", "Meeting")
 </p>
 <table class="table">
     <tr>
