--- a/OruBloggen/Content/Site.css
+++ b/OruBloggen/Content/Site.css
@@ -50,8 +50,8 @@ textarea {
 }
 
 .images {
-    width: 160px;
-    height: 160px;
+    width: 100px;
+    height: 100px;
     background: #FFFFFF;
     margin: auto;
     -moz-border-radius: 60px;
@@ -61,7 +61,7 @@ textarea {
 }
 .hover tr:hover
 {
-    background-color: black;
+    background-color: #888;
     Color: white;
 }
 .textSize
@@ -69,8 +69,46 @@ textarea {
     font-size: 20px;
 }
 
+body > div.container.body-content > form > table > tbody > tr:nth-child(1) > td:nth-child(1) {
+    width: 1px;
+}
+#meeting-anvandare {
+    display:-webkit-box;
+}
+.valja-anvandare {
+    width:48%;
+    float:left;
+}
+#remove, #add {
+    margin-left: auto;
+    font-weight:700;
+}
 
+.link::after, .link:active, .link:link, .link:visited, .link:hover, .link:active, .link:focus {
+    
+    border-color: #FFFFFF;
+    background-color: #ff0000
+}
 
+#usersLb, #selectedUsersLb {
+min-height: 82px;
+}
+
+body > div.container.body-content > form > div > div:nth-child(9) > label {
+    margin-top: 23px;
+}
+body > div.container.body-content > form > div > div:nth-child(8) {
+    margin-bottom: 0px;
+}
+
+.button1, button:focus {
+    outline: 0;
+    font-size: 14px;
+    color: #000000;
+    background-color: #FFFFFF;
+    border: none;
+    
+}
 
 
 
