--- a/OruBloggen/Views/MeetingCalendar/Index.cshtml
+++ b/OruBloggen/Views/MeetingCalendar/Index.cshtml
@@ -118,7 +118,7 @@
                         $(document)
                         .on("click", "#meetingAccess", function () {
                             var meetingID = calEvent.meetingID;
-                            location.href = '/Meeting/MeetingDetails/' + meetingID + '_blank';
+                            location.href = '/Meeting/MeetingDetails/' + meetingID;
                         });
 
                     }
