--- a/OruBloggen/Views/Shared/_LoginPartial.cshtml
+++ b/OruBloggen/Views/Shared/_LoginPartial.cshtml
@@ -26,7 +26,7 @@
         @Html.ActionLink("Kalender", "Index", "MeetingCalendar")
     </li>
     <li>
-        @Html.ActionLink("Mina Möten", "YourMeetings", "Meeting")
+        @Html.ActionLink("Mina Möten", "ListCreatedMeetings", "Meeting")
     </li>
 
     @if (Request.IsAuthenticated)
